update jvm监控工具及线上问题